// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types components Render colapse with success 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root MuiBox-root-2 sc-bdfBwQ jCnDFQ"
      >
        <div
          class="MuiChip-root sc-gsTCUz fursvC MuiChip-outlined"
          colapse="1"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm bcBWcq MuiChip-avatar"
            color="#78c851"
            title="grass"
          >
            <img
              alt="grass"
              class="MuiAvatar-img"
              src="grass.svg"
            />
          </div>
          <span
            class="MuiChip-label"
          />
        </div>
        <div
          class="MuiChip-root sc-gsTCUz fursvC MuiChip-outlined"
          colapse="1"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm iREEXP MuiChip-avatar"
            color="#a04aa0"
            title="poison"
          >
            <img
              alt="poison"
              class="MuiAvatar-img"
              src="poison.svg"
            />
          </div>
          <span
            class="MuiChip-label"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root MuiBox-root-2 sc-bdfBwQ jCnDFQ"
    >
      <div
        class="MuiChip-root sc-gsTCUz fursvC MuiChip-outlined"
        colapse="1"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm bcBWcq MuiChip-avatar"
          color="#78c851"
          title="grass"
        >
          <img
            alt="grass"
            class="MuiAvatar-img"
            src="grass.svg"
          />
        </div>
        <span
          class="MuiChip-label"
        />
      </div>
      <div
        class="MuiChip-root sc-gsTCUz fursvC MuiChip-outlined"
        colapse="1"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm iREEXP MuiChip-avatar"
          color="#a04aa0"
          title="poison"
        >
          <img
            alt="poison"
            class="MuiAvatar-img"
            src="poison.svg"
          />
        </div>
        <span
          class="MuiChip-label"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Types components Render with success 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root MuiBox-root-1 sc-bdfBwQ jCnDFQ"
      >
        <div
          class="MuiChip-root sc-gsTCUz kKUUUe MuiChip-outlined"
          colapse="0"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm bcBWcq MuiChip-avatar"
            color="#78c851"
            title="grass"
          >
            <img
              alt="grass"
              class="MuiAvatar-img"
              src="grass.svg"
            />
          </div>
          <span
            class="MuiChip-label"
          >
            grass
          </span>
        </div>
        <div
          class="MuiChip-root sc-gsTCUz kKUUUe MuiChip-outlined"
          colapse="0"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm iREEXP MuiChip-avatar"
            color="#a04aa0"
            title="poison"
          >
            <img
              alt="poison"
              class="MuiAvatar-img"
              src="poison.svg"
            />
          </div>
          <span
            class="MuiChip-label"
          >
            poison
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root MuiBox-root-1 sc-bdfBwQ jCnDFQ"
    >
      <div
        class="MuiChip-root sc-gsTCUz kKUUUe MuiChip-outlined"
        colapse="0"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm bcBWcq MuiChip-avatar"
          color="#78c851"
          title="grass"
        >
          <img
            alt="grass"
            class="MuiAvatar-img"
            src="grass.svg"
          />
        </div>
        <span
          class="MuiChip-label"
        >
          grass
        </span>
      </div>
      <div
        class="MuiChip-root sc-gsTCUz kKUUUe MuiChip-outlined"
        colapse="0"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle sc-dlfnbm iREEXP MuiChip-avatar"
          color="#a04aa0"
          title="poison"
        >
          <img
            alt="poison"
            class="MuiAvatar-img"
            src="poison.svg"
          />
        </div>
        <span
          class="MuiChip-label"
        >
          poison
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
